--- a/expressions/index.html
+++ b/expressions/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ranch">
     <head>
         <link rel="stylesheet" type="text/css" href="/css/foundation.min.js"/>
     </head>
     <body>
+        <p> I am {{ 3 + 5 }} </p>
+        <p> {{ 'hello' + ' there' }} </p>
+        
         <script type="text/javascript" src="/js/angular.min.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
