--- a/modules/index.html
+++ b/modules/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ranch">
     <head>
-        <link rel="stylesheet" type="text/css" src="/css/foundation.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="/css/foundation.min.js"/>
     </head>
     <body>
         <script type="text/javascript" src="/js/angular.min.js"></script>
